--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ header {
   text-align: center;
 }
 
+.headliner {
+  line-height: 1.3em;
+  padding-top: 20px;
+}
+
 nav.menu a {
   display: inline-block;
   padding: 0.5em 1em;
@@ -89,6 +94,7 @@ h4 {
   padding: 1em 2em;
   max-width: 35em;
   margin: auto;
+  text-align: center;
 }
 
 code {
